fixed the alignment and number of digits for the predictions/user_scenario fixes #423

--- a/public/stylesheets/sass/prediction.sass
+++ b/public/stylesheets/sass/prediction.sass
@@ -80,6 +80,10 @@ ul
             width: 42%
             float: left
             font: 12px/14px "Lucida Grande",Verdana, Arial
+          span.right_align
+            width: 22%
+            padding-right: 20%
+            text-align: right
         li:hover
           background: url('/images/layout/bg-prediction-active.png') no-repeat
           color: #FFF
